10/networkpolicyA.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: namespace-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
