10/networkpolicyB.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-egress
  namespace: namespace-b
spec:
  podSelector: {}
  policyTypes:
  - Egress
